@@ -10,6 +10,7 @@ Date: 2025-8-30
     - If an exclusive filter is activated, all others disable
     - If a non-exclusive filter is activated, any enabled exclusive filters are disabled
     - This only applies to filters within a group
+    - A changelog is displayed when you are prompted to update
   Bugfixes:
     - Filters no longer have the chance to increasingly make the window bigger
     - Incorrectly typed values inside of config.json are properly caught inside of config_get_optional_property
